--- a/sge/src/index.css
+++ b/sge/src/index.css
@@ -1,8 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10,215&family=Montserrat+Alternates:ital,wght@0,400;0,600;1,400;1,500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10,314&family=Montserrat+Alternates:ital,wght@0,400;0,600;1,400;1,500&family=Timmana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+.timmana-regular {
+    font-family: "Timmana", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .montserrat-alternates-regular {
     font-family: "Montserrat Alternates", sans-serif;
     font-weight: 400;
@@ -27,4 +34,17 @@
     font-style: normal;
     font-variation-settings:
       "slnt" -10;
+  }
+  .work-sans-regular{
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .quicksand-regular {
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
